--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <input type="number" id="interview-marks" name="interview-marks" required>
             </div>
             <div>
-                <label for="fsc-marks">FSc Marks (out of 1100):</label>
-                <input type="number" id="fsc-marks" name="fsc-marks" required>
+                <label for="fsc-percentage">FSc Percentage:</label>
+                <input type="number" id="fsc-percentage" name="fsc-percentage" required>
             </div>
             <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
         </form>
