--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <form id="aggregate-form">
             <div>
                 <label for="test-marks">Test Marks (out of 100):</label>
-                <input type="number" id="test-marks" name="test-marks" required>
+                <input type="number" id="test-marks" name="test-marks" required min="0" max="100">
             </div>
             <div>
                 <label for="interview-marks">Interview Marks (out of 10):</label>
-                <input type="number" id="interview-marks" name="interview-marks" required>
+                <input type="number" id="interview-marks" name="interview-marks" required min="0" max="10">
             </div>
             <div>
-                <label for="fsc-percentage">FSc Percentage:</label>
-                <input type="number" id="fsc-percentage" name="fsc-percentage" required>
+                <label for="fsc-marks">FSc Marks (out of 1200):</label>
+                <input type="number" id="fsc-marks" name="fsc-marks" required min="0" max="1200">
             </div>
             <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
         </form>
