--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
             </div>
             <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
         </form>
-        <div id="result"></div>
+        <div id="results">
+            <p id="test-weighted">Test Weighted Score: </p>
+            <p id="interview-weighted">Interview Weighted Score: </p>
+            <p id="fsc-weighted">FSc Weighted Score: </p>
+            <p id="aggregate">Your aggregate is: </p>
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
