--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             </div>
             <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
         </form>
-        <div id="results">
-            
+        <div id="result">
             <p id="aggregate">Your aggregate is: </p>
         </div>
     </div>
