--- a/index.html
+++ b/index.html
@@ -7,25 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Aggregate Calculator</h1>
-        <form id="aggregate-form">
-            <div>
-                <label for="test-marks">Test Marks (out of 100):</label>
-                <input type="number" id="test-marks" name="test-marks" required min="0" max="100">
+    <div class="main-container">
+        <div class="about-me">
+            <h2>About Me</h2>
+            <p>
+                I am Najeeb Ullah Afridi, currently studying BS Data Science (5th semester) at IMSciences Peshawar. 
+                I created this small tool to help newcomers calculate their aggregate before the official one is released.
+            </p>
+            <p>
+                We created a WhatsApp group where we help solve your queries about the admission process, scholarships, 
+                and even academic help related to the field. Below is the link to the WhatsApp group.
+            </p>
+            <p>
+                You can also contact me at: <a href="mailto:najeebafridi.ims@gmail.com">najeebafridi.ims@gmail.com</a> 
+                and follow me on <a href="https://www.linkedin.com/in/najeebafridi" target="_blank">LinkedIn</a>.
+            </p>
+            <p>
+                <a href="https://chat.whatsapp.com/your-group-link" target="_blank">
+                    <img src="whatsapp-icon.png" alt="WhatsApp Group" style="width:24px;height:24px;">
+                    Join our WhatsApp group
+                </a>
+            </p>
+        </div>
+        <div class="container">
+            <h1>Aggregate Calculator</h1>
+            <form id="aggregate-form">
+                <div>
+                    <label for="test-marks">Test Marks (out of 100):</label>
+                    <input type="number" id="test-marks" name="test-marks" required min="0" max="100">
+                </div>
+                <div>
+                    <label for="interview-marks">Interview Marks (out of 10):</label>
+                    <input type="number" id="interview-marks" name="interview-marks" required min="0" max="10">
+                </div>
+                <div>
+                    <label for="fsc-marks">FSc Marks (out of 1200):</label>
+                    <input type="number" id="fsc-marks" name="fsc-marks" required min="0" max="1200">
+                </div>
+                <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
+            </form>
+            <div id="result">
+                <p id="aggregate">Your aggregate is: </p>
             </div>
-            <div>
-                <label for="interview-marks">Interview Marks (out of 10):</label>
-                <input type="number" id="interview-marks" name="interview-marks" required min="0" max="10">
-            </div>
-            <div>
-                <label for="fsc-marks">FSc Marks (out of 1200):</label>
-                <input type="number" id="fsc-marks" name="fsc-marks" required min="0" max="1200">
-            </div>
-            <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
-        </form>
-        <div id="result">
-            <p id="aggregate">Your aggregate is: </p>
         </div>
     </div>
     <script src="scripts.js"></script>
