--- a/index.html
+++ b/index.html
@@ -9,26 +9,28 @@
 <body>
     <div class="main-container">
         <div class="about-me">
-            <h2>About Me</h2>
-            <p>
-                I am Najeeb Ullah Afridi, currently studying BS Data Science (5th semester) at IMSciences Peshawar. 
-                I created this small tool to help newcomers calculate their aggregate before the official one is released.
-            </p>
-            <p>
-                We created a WhatsApp group where we help solve your queries about the admission process, scholarships, 
-                and even academic help related to the field. Below is the link to the WhatsApp group.
-            </p>
-            <p>
-                You can also contact me at: <a href="mailto:najeebafridi.ims@gmail.com">najeebafridi.ims@gmail.com</a> 
-                and follow me on <a href="https://www.linkedin.com/in/najeebafridi" target="_blank">LinkedIn</a>.
-            </p>
-            <p>
-                <a href="https://chat.whatsapp.com/your-group-link" target="_blank">
-                    <img src="whatsapp-icon.png" alt="WhatsApp Group" style="width:24px;height:24px;">
-                    Join our WhatsApp group
-                </a>
-            </p>
-        </div>
+    <h2>About Me</h2>
+    <p>
+        I am Najeeb Ullah Afridi, a 5th-semester BS Data Science student at IMSciences Peshawar. 
+        I developed this tool to help newcomers calculate their aggregate before the official results are released.
+    </p>
+    <p>
+        We also have a WhatsApp group dedicated to answering queries about the admission process, scholarships, 
+        and academic support in the field. You can join our WhatsApp group using the link below.
+    </p>
+    <p>
+        You can also contact me at: 
+        <a href="mailto:najeebafridi.ims@gmail.com">najeebafridi.ims@gmail.com</a>
+    </p>
+    <p>
+        Follow me on 
+        <a href="https://www.linkedin.com/in/najeeb-ullah-afridi/" target="_blank">LinkedIn</a>.
+    </p>
+    <p>
+        <a href="https://chat.whatsapp.com/F8M3RAXhD1DAGfdZfUivPn" target="_blank">Join our WhatsApp group</a>
+    </p>
+</div>
+
         <div class="container">
             <h1>Aggregate Calculator</h1>
             <form id="aggregate-form">
