--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <input type="number" id="interview-marks" name="interview-marks" required min="0" max="10">
                 </div>
                 <div>
-                    <label for="fsc-marks">FSc Marks (out of 1200):</label>
+                    <label for="fsc-marks">first year marks (out of 600):</label>
                     <input type="number" id="fsc-marks" name="fsc-marks" required min="0" max="1200">
                 </div>
                 <button type="button" onclick="calculateAggregate()">Calculate Aggregate</button>
